Cropped offering images to ensure consistency across flex percentages, updated css for offering tile h5

--- a/src/pages/home/Homepage.css
+++ b/src/pages/home/Homepage.css
@@ -77,7 +77,7 @@
 
 .homepage-offerings-headline {
     background: linear-gradient(rgb(101, 97, 122), rgba(174, 161, 185, 0.573));
-    color: rgba(227, 225, 235, 0.947);
+    color: rgb(244, 243, 251);
     font-family: Abhaya Libre;
     font-size: 5rem;
     font-weight: 400;
@@ -90,21 +90,31 @@
     background-image: url('./assets/homepage-offerings-gallery-background-img.png');
     background-size: cover;
     color: white;
-    display: grid;
-    grid-template-columns: 30% 30%;
-    grid-column-gap: 20%;
-    grid-row-gap: 0%;
-    padding: 10% 5%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0;
 }
 
 .homepage-offerings-gallery h5 {
     font-family: Quicksand;
-    font-weight: 400;
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: .5rem;
+    letter-spacing: .1rem;
+}
+
+.offering-tile {
+    width: 40%;
+    max-width: 15rem;
+    padding: 4%;
 }
 
 .offering-tile img {
-    height: 12rem;
-    width: 12rem;
+    height: auto;
+    width: 100%;
     border-radius: 10%;
     filter: saturate(50%);
 }
@@ -116,7 +126,7 @@
 .homepage-offerings-button-container button {
     border: 2px solid rgba(102, 94, 147, 0.00);
     background: rgba(46, 44, 59, 0.587);
-    width: 13rem;
+    width: 40%;
     height: 2.75rem;
     margin: 1.75rem;
     color: #FFF;
@@ -135,7 +145,7 @@
 }
 
 .homepage-connect-headline  {
-    color: rgba(207, 206, 214, 0.874);
+    color: rgba(244, 243, 251, 0.889);
     font-family: Abhaya Libre;
     font-size: 5rem;
     font-weight: 400;
